--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 /node_modules/
 /public/build/
+.vscode
 
 .DS_Store
+.firebase
+
+*.log
+.env.development
+.env.development.emulate
+.env.prod
 .runtimeconfig.json
