--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "dev:emulate": "firebase emulators:start",
-    "dev:RollUp": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "dev": "env-cmd -f .env.development rollup -c -w",
+    "dev:emulate": "env-cmd -f .env.development.emulate rollup -c -w & npm run emulate",
+    "emulate": "firebase emulators:start --debug",
+    "start": "sirv public --no-clear",
+    "build:dev": "env-cmd -f .env.development npm run build",
+    "build:prod": "env-cmd -f .env.prod npm run build",
+    "deploy:dev": "npm run build:dev && bash scripts/deploy_dev.sh",
+    "deploy:prod": "npm run build:prod && bash scripts/deploy_prod.sh"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "env-cmd": "^10.1.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -21,6 +26,7 @@
   },
   "dependencies": {
     "firebase": "^8.8.0",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "sirv-cli": "^1.0.0"
   },
   "description": "*Looking for a shareable component template? Go here --> [sveltejs/component-template](https://github.com/sveltejs/component-template)*",
