--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@sentry/browser": "^6.11.0",
     "firebase": "^8.8.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "sirv-cli": "^1.0.0"
