--- a/.github/workflows/dev-hosting.yml
+++ b/.github/workflows/dev-hosting.yml
@@ -38,7 +38,7 @@ jobs:
             - name: Set the Firebase Config
               uses: w9jds/firebase-action@master
               with:
-                  args: functions:config:set app.id="dapp_34d0a87e7e5f4b1b9e8457b0c6a56ce0" app.secret="964c07b86149d539118df2dab6576ed7183c9c03c0b5d903f1c9fe0fcf803af6" app.url="https://dev.sable.letsdive.io"
+                  args: functions:config:set app.id=${{secrets.DEV_DAPP_ID}} app.secret=${{secrets.DEV_DAPP_SECRET}} app.url=${{secrets.DEV_DAPP_URL}}
               env:
                   GCP_SA_KEY: ${{ secrets.DEV_GCP_SA_KEY }}
                   TARGET: dev
